# SalientSignal

./: .env.example  .gitignore  LICENSE  README.md  middleware.ts  render.yaml
docs/: RENDER_DEPLOYMENT.md  SalientSignal-Algorithms.md  SalientSignal-Icon-Prompt.md  SalientSignal-Phase1-Review.md  SalientSignal-Phase2-Review.md  SalientSignal-Project.md  SalientSignal-Source-Database.md  SalientSignal-Technical-Spec.md  SalientSignal-Theme-Backfill-Plan.md  SalientSignal-Todo.md  SalientSignal-User-Stories.md  SalientSignal-Way-Ahead.md  THEME_PIPELINE_DEPLOYMENT.md
pipeline/: .env.example  .env.example.render  COLD_START.md  Dockerfile  pyproject.toml
pipeline/data/: outlets.json  theme_apr9_monthly.json  theme_labels.json
pipeline/scripts/: enrich_recent_articles.py  gdelt_probe.py  import_backfill.py  import_gkg_backfill.py  preflight_check.py  run_backfill.py  run_gkg_backfill.py  run_gkg_hourly.py  run_pipeline.py  seed_outlets.py  verify_first_run.py  verify_schema.py  verify_seed.py
pipeline/src/: __init__.py  antihal.py  backfill.py  baselines.py  classifier.py  coordination.py  countries.py  db.py  deviation.py  gdelt_client.py  gdelt_timeline_client.py  gkg_client.py  outlets.py  pipeline.py  theme_aggregator.py  themes.py
pipeline/tests/: test_antihal.py  test_antihal_phase2.py  test_backfill.py  test_classifier.py  test_db_batch.py  test_deviation.py  test_gdelt_timeline_client.py  test_gkg_client.py  test_import_backfill.py  test_import_gkg_backfill.py  test_outlets_normalization.py  test_pipeline_phase2.py  test_run_backfill_cli.py  test_run_gkg_hourly.py  test_theme_aggregator.py
shared/: countries.json  schema.sql
shared/migrations/: 002_country_theme_tables.sql  003_enable_rls.sql
src/app/: HomePageClient.tsx  layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/country/[code]/: page.tsx
src/app/methodology/: page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: Clock.tsx  ColdStartBanner.tsx  ErrorBoundary.tsx  HistoricalDataBanner.tsx
src/components/Brand/: Wordmark.tsx
src/components/Country/: CountryThemePanel.tsx  ThemeTimelineSparkline.tsx
src/components/Globe/: ArcModal.tsx  ColorLegend.tsx  CountrySearch.tsx  GlobeWrapper.tsx  InlineTutorial.tsx  RegionFilter.tsx
src/lib/: auth.ts  colors.ts  countries-meta.ts  country-regions.ts  data.ts  dummy-data.ts  supabase.ts  theme_narrative.test.ts  theme_narrative.ts  types.ts
src/styles/: globals.css
web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: HomePageClient.tsx  layout.tsx  page.tsx  robots.ts
web/src/app/country/[code]/: page.tsx
web/src/app/login/: page.tsx
web/src/components/Globe/: GlobeWrapper.tsx  ViewToggle.tsx
web/src/lib/: colors.ts  data.ts  dummy-data.ts  types.ts
