[project]
name = "salientsignal-pipeline"
version = "0.1.0"
description = "SalientSignal data ingestion and processing pipeline. Pulls state media articles from GDELT, classifies audience, calculates baseline deviation, detects coordination, and writes to Supabase."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Atlas Peak Media, LLC" }
]

dependencies = [
    # GDELT DOC 2.0 client
    "gdeltdoc>=1.7.0",
    # Supabase Python client
    "supabase>=2.5.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # HTTP client (gdeltdoc dependency, also used directly)
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Data handling (gdeltdoc returns DataFrames)
    "pandas>=2.0.0",
    # Numerical operations for baselines/deviations
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
